CS-997: Fix dashlet invisible horizontal scrollbar

--- a/sugarcrm/styleguide/less/sugar/dashlets.less
+++ b/sugarcrm/styleguide/less/sugar/dashlets.less
@@ -138,7 +138,12 @@
     .dashlet-console-list {
       .console-list-view-table {
         overflow: auto;
+        height: calc(~'100% - 39px');
       }
+    }
+
+    .block-footer {
+      min-height: 37px;
     }
   }
 
